--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,6 @@ dependencies {
   compile 'com.android.support:cardview-v7:23.2.1'
   compile 'com.android.support:recyclerview-v7:23.2.1'
   compile 'com.github.QuadFlask:colorpicker:0.0.11'
-
   compile 'com.jakewharton:butterknife:7.0.1'
   compile project(':lib')
 }
@@ -36,7 +35,7 @@ def passwordFromKeychain = { name ->
 
 android {
   compileSdkVersion 23
-  buildToolsVersion "24.0.0"
+  buildToolsVersion '24.0.2'
 
   defaultConfig {
     minSdkVersion 21
