--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.flopcode.dotstar.android">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <application
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity
-                android:name=".Index"
-                android:label="@string/app_name"
-                android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+  <uses-permission android:name="android.permission.INTERNET"/>
+  <application
+    android:allowBackup="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:supportsRtl="true"
+    android:theme="@style/AppTheme">
+    <activity
+      android:name=".Index"
+      android:label="@string/app_name"
+      android:theme="@style/AppTheme.NoActionBar">
+      <intent-filter>
+        <action
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-        <activity
-                android:name=".PresetDetailActivity"
-                android:label="@string/title_preset_detail"
-                android:parentActivityName=".Index"
-                android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                    android:name="android.support.PARENT_ACTIVITY"
-                    android:value=".Index"/>
-        </activity>
-    </application>
+          android:name="android.intent.action.MAIN"/>
+        <category
+          android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+      <intent-filter>
+        <action
+          android:name="android.intent.action.VIEW"/>
+        <category
+          android:name="android.intent.category.DEFAULT"/>
+        <data
+          android:scheme="zeroconf"
+          android:host="_dotstar._tcp.local."/>
+      </intent-filter>
+
+    </activity>
+    <activity
+      android:name=".PresetDetailActivity"
+      android:label="@string/title_preset_detail"
+      android:parentActivityName=".Index"
+      android:theme="@style/AppTheme.NoActionBar">
+      <meta-data
+        android:name="android.support.PARENT_ACTIVITY"
+        android:value=".Index"/>
+    </activity>
+  </application>
 
 </manifest>
