--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -14,20 +14,19 @@ targetCompatibility = 1.7
 
 repositories {
   jcenter()
+  mavenCentral()
 }
 
 dependencies {
   compile 'joda-time:joda-time:2.9.2'
-  compile 'com.google.code.gson:gson:2.6.2'
   compile 'com.google.guava:guava:19.0'
-  compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
-  compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
-  compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+  compile 'com.squareup.retrofit2:retrofit:2.1.0'
+  compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+  compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
   compile('org.simpleframework:simple-xml:2.7.1') {
     exclude group: 'stax', module: 'stax-api'
     exclude group: 'xpp3', module: 'xpp3'
   }
-
   testCompile 'junit:junit:4.12'
   testCompile 'org.hamcrest:hamcrest-core:1.3'
   testCompile 'org.assertj:assertj-core:2.5.0'
