--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ dependencies {
   compile 'com.android.support:cardview-v7:23.2.1'
   compile 'com.android.support:recyclerview-v7:23.2.1'
 
+
+  compile 'com.google.guava:guava:19.0' // stupid idea
+  compile 'com.squareup.retrofit2:retrofit:2.1.0' // stupid idea
+
   compile 'com.github.QuadFlask:colorpicker:0.0.11'
 
   compile "com.jakewharton:butterknife:$butterknifeVersion"
