--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
       android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
         <action
-
           android:name="android.intent.action.MAIN"/>
         <category
           android:name="android.intent.category.LAUNCHER"/>
@@ -39,6 +38,7 @@
         android:name="android.support.PARENT_ACTIVITY"
         android:value=".Index"/>
     </activity>
+    <activity android:name=".PreferencesActivity"/>
   </application>
 
 </manifest>
