--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,11 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.2.0'
-    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+    classpath 'com.android.tools.build:gradle:2.3.3'
   }
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 
 repositories {
   jcenter()
@@ -18,21 +16,19 @@ repositories {
   maven { url "https://jitpack.io" }
 }
 
-def butterknifeVersion = '8.4.0'
+def butterknifeVersion = '8.3.0' // upgrading to 8.6.0 leads to a
 dependencies {
   compile 'com.android.support:appcompat-v7:23.2.1'
   compile 'com.android.support:design:23.2.1'
   compile 'com.android.support:cardview-v7:23.2.1'
   compile 'com.android.support:recyclerview-v7:23.2.1'
 
-
-  compile 'com.google.guava:guava:19.0' // stupid idea
-  compile 'com.squareup.retrofit2:retrofit:2.1.0' // stupid idea
-
   compile 'com.github.QuadFlask:colorpicker:0.0.11'
+  compile 'com.google.guava:guava:22.0-android' // should not be needed its already in lib
+  compile 'com.squareup.retrofit2:retrofit:2.1.0' // should not be needed its already in lib
 
   compile "com.jakewharton:butterknife:$butterknifeVersion"
-  apt "com.jakewharton:butterknife-compiler:$butterknifeVersion"
+  annotationProcessor "com.jakewharton:butterknife-compiler:$butterknifeVersion"
 
   compile project(':lib')
 }
@@ -47,7 +43,7 @@ def passwordFromKeychain = { name ->
 
 android {
   compileSdkVersion 23
-  buildToolsVersion '25.0.2'
+  buildToolsVersion '26.0.0'
 
   defaultConfig {
     minSdkVersion 21
