--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -19,7 +19,7 @@ repositories {
 
 dependencies {
   compile 'joda-time:joda-time:2.9.4'
-  compile 'com.google.guava:guava:19.0'
+  compile 'com.google.guava:guava:22.0-android'
   compile 'com.squareup.retrofit2:retrofit:2.1.0'
   compile 'com.squareup.retrofit2:converter-gson:2.1.0'
   compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
