--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,21 @@ def passwordFromKeychain = { name ->
   return stdout.trim()
 }
 
+def gitVersion = {
+  def version = "git describe --dirty".execute().text.trim();
+  println("USING VERSION: ${version} for this build");
+  println("USING VERSION: ${version} for this build");
+  println("USING VERSION: ${version} for this build");
+  println("USING VERSION: ${version} for this build");
+  println("USING VERSION: ${version} for this build");
+  println("USING VERSION: ${version} for this build");
+  println("USING VERSION: ${version} for this build");
+  println("USING VERSION: ${version} for this build");
+  println("USING VERSION: ${version} for this build");
+  println("USING VERSION: ${version} for this build");
+  return version;
+}
+
 android {
   compileSdkVersion 23
   buildToolsVersion '26.0.0'
@@ -48,8 +63,8 @@ android {
   defaultConfig {
     minSdkVersion 21
     targetSdkVersion 21
-    versionCode 1
-    versionName "1"
+    versionCode 2
+    versionName gitVersion()
   }
 
   dexOptions {
