--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,9 +93,11 @@ android {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
       applicationIdSuffix ".release"
+      resValue "string", "app_name", "DotStar"
     }
     debug {
       applicationIdSuffix ".debug"
+      resValue "string", "app_name", "DotStar-Debug"
     }
   }
 
