--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,14 +7,13 @@ buildscript {
     classpath 'com.android.tools.build:gradle:2.3.3'
   }
 }
-
-apply plugin: 'com.android.application'
-
 repositories {
   jcenter()
   mavenCentral()
   maven { url "https://jitpack.io" }
 }
+
+apply plugin: 'com.android.application'
 
 def butterknifeVersion = '8.3.0' // upgrading to 8.6.0 leads to a
 dependencies {
@@ -35,10 +34,7 @@ dependencies {
 
 // from http://stackoverflow.com/a/22597752
 def passwordFromKeychain = { name ->
-  def proc = ["security", "find-generic-password", "-s", name, "-a", name, "-w"].execute()
-  proc.waitFor()
-  def stdout = proc.in.text
-  return stdout.trim()
+  return "security find-generic-password -s ${name} -a ${name} -w".execute().text.trim();
 }
 
 def gitVersion = {
