--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,21 +1,13 @@
-buildscript {
-  repositories {
-    jcenter()
-  }
-  dependencies {
-    classpath 'com.android.tools.build:gradle:2.1.3'
-  }
+repositories {
+  jcenter()
+  mavenCentral()
+  maven { url "https://jitpack.io" }
 }
 
 apply plugin: 'java'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
-
-repositories {
-  jcenter()
-  mavenCentral()
-}
 
 dependencies {
   compile 'joda-time:joda-time:2.9.4'
@@ -33,8 +25,10 @@ dependencies {
 }
 
 test {
-  testLogging.showStandardStreams = true
-  testLogging.exceptionFormat = 'full'
+  testLogging {
+    showStandardStreams = true
+    exceptionFormat = 'full'
+  }
 }
 
 apply plugin: 'jacoco'
