--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,7 @@
+import org.gradle.internal.logging.text.StyledTextOutput;
+import org.gradle.internal.logging.text.StyledTextOutputFactory;
+import org.gradle.internal.logging.text.StyledTextOutput.Style
+
 buildscript {
   repositories {
     jcenter()
@@ -39,16 +43,13 @@ def passwordFromKeychain = { name ->
 
 def gitVersion = {
   def version = "git describe --dirty".execute().text.trim();
-  println("USING VERSION: ${version} for this build");
-  println("USING VERSION: ${version} for this build");
-  println("USING VERSION: ${version} for this build");
-  println("USING VERSION: ${version} for this build");
-  println("USING VERSION: ${version} for this build");
-  println("USING VERSION: ${version} for this build");
-  println("USING VERSION: ${version} for this build");
-  println("USING VERSION: ${version} for this build");
-  println("USING VERSION: ${version} for this build");
-  println("USING VERSION: ${version} for this build");
+  if (version.indexOf('dirty') != -1) {
+    services
+      .get(StyledTextOutputFactory)
+      .create("dirty")
+      .withStyle(Style.Failure)
+      .println("ATTENTION dirty build with version: '${version}'")
+  }
   return version;
 }
 
