--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
   package="com.flopcode.dotstar.android">
   <uses-permission android:name="android.permission.INTERNET"/>
   <application
+    android:name=".Application"
     android:allowBackup="true"
     android:icon="@drawable/icon"
     android:label="@string/app_name"
