--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
   repositories {
     jcenter()
-    mavenCentral()
+    google()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.3.3'
+    classpath 'com.android.tools.build:gradle:3.0.1'
     classpath 'com.github.triplet.gradle:play-publisher:1.2.0'
   }
 }
@@ -52,7 +52,6 @@ def gitVersion = {
 
 android {
   compileSdkVersion 23
-  buildToolsVersion '26.0.0'
 
   defaultConfig {
     minSdkVersion 21
@@ -80,6 +79,7 @@ android {
       keyPassword passwordFromKeychain("dotstar-play-store")
     }
   }
+
   playAccountConfigs {
     defaultAccountConfig {
       jsonFile = file('./store/Google Play Android Developer-adb519ba6fad.json')
